test/Dialect/ZKIR/module_only_fail.zkir
// RUN: zkir-opt %s --split-input-file --verify-diagnostics

modules {} // expected-error {{custom op 'modules' is unknown}}
